pyk/src/tests/unit/kore/test-data/definitions/pass/test-dv-1.kore
[]
module DV-1
    sort Nat{} [hasDomainValues{}()]
    axiom {} \dv{Nat{}}("0") []
endmodule
[]