pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-issue-94-2.kore
[]
module TEST

sort Int{} [hasDomainValues{}()]
sort String{} []
sort Exp{} []

symbol inj{SIn,SOut}(SIn): SOut []
symbol info{S}(String{}, S) : S []
symbol input{}(Int{}, Int{}) : String{} []

axiom{} // input: "-1"
 info{Exp{}}(input{}(\dv{Int{}}("1"),\dv{Int{}}("2")),
        inj{Int{},Exp{}}(
            info{Int{}}(\and{String{}}(input{}(\dv{Int{}}("1"),\dv{Int{}}("2")),
                            \equals{String{},String{}}(input{}(\dv{Int{}}("1"),\dv{Int{}}("2")), "-15")),
                        \dv{Int{}}("-1"))
    )) []
endmodule []
